--- a/index.html
+++ b/index.html
@@ -28,24 +28,35 @@
           required
         />
 
-        <!--Erase State            
-            <label for="search-state">State</label>
-            <input type="text" name="search-state" id="js-search-state" required>
--->
-        <!--Erase Max Results
-            <label for="max-results">Maximum results to return</label>
-            <input type="number" name="max-results" id="js-max-results" value="10">
-
- -->
-
         <input type="submit" value="Go!" />
       </form>
 
       <p id="js-error-message" class="error-message"></p>
+
+      <p id="js-error-message2" class="error-message2"></p>
+
+      <p id="js-error-message3" class="error-message3"></p>
+
+      <!--RESULTS SECTION -->
       <section id="results" class="hidden">
-        <h2>Search results</h2>
+        <h2></h2>
         <ul id="results-list"></ul>
       </section>
+      <!------------------->
+
+      <!--TRAILS SECTION-->
+      <section id="getTrails" class="hidden">
+        <h2>Trails</h2>
+        <ul id="results-getTrails"></ul>
+      </section>
+      <!------------------->
+
+      <!--WEATHER SECTION-->
+      <section id="getWeather" class="hidden">
+        <h2>Weather</h2>
+        <ul id="results-getWeather"></ul>
+      </section>
+      <!------------------>
     </div>
     <script src="index.js"></script>
   </body>
