--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>New finder</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>GO-Be Active</title>
+    <meta
+      name="description"
+      content="Find great Trails, Music, Theatre & Sporting Events in any city and Go-Be Active"
+    />
+    <meta property="og:title" content="Go-Be Active" />
+
+    <meta
+      property="og:description"
+      content="What ever city you are in - GO-Be Active."
+    />
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+    <!--<link rel="stylesheet" href="index.css" />-->
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/grid.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="social.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/0f63d8ca7c.css"
+      media="all"
+    />
+
+    <script src="https://use.fontawesome.com/webfontloader/1.6.24/webfontloader.js"></script>
+
+    <!--======================-->
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -14,69 +41,238 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
+    <!-------====================-->
+    <!-------============---->
+
     <div class="container">
-      <h1>Enter Location</h1>
+      <!--HEADER/FORM SECTION -->
+      <header>
+        <div class="welcomeImg">
+          <div class="divForm">
+            <form id="js-form">
+              <fieldset>
+                <img class="Logo-GoBe" />
 
-      <form id="js-form">
-        <label for="search-term">City</label>
-        <input
-          type="text"
-          name="search-term"
-          id="js-search-term"
-          placeholder="Denver,CO"
-          value="Denver,CO"
-          required
-        />
-
-        <input type="submit" value="Go!" />
-      </form>
-
-      <p id="js-error-message" class="error-message"></p>
-      <p id="js-error-message2" class="error-message2"></p>
-      <p id="js-error-message3" class="error-message3"></p>
-      <p id="js-error-message2" class="error-message4"></p>
-      <p id="js-error-message3" class="error-message5"></p>
+                <h1>What ever city you visit - GO-Be Active.</h1>
+                <p>
+                  A list of trails, music, theatre & sporting events to explore
+                  like a local.
+                </p>
+                <label for="search-term"></label>
+                <input
+                  type="text"
+                  name="search-term"
+                  id="js-search-term"
+                  placeholder="Denver, CO"
+                  value="Denver,CO"
+                  required
+                />
+                <br />
+                <!--<input type="submit" value="Go!" />-->
+                <button type="submit"><span>GO!</span></button>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </header>
+      <!--
+      <section class="errorMessages">
+        <p id="js-error-message" class="error-message"></p>
+        <p id="js-error-message2" class="error-message2"></p>
+        <p id="js-error-message3" class="error-message3"></p>
+        <p id="js-error-message2" class="error-message4"></p>
+        <p id="js-error-message3" class="error-message5"></p>
+      </section>-->
+      <!----------------->
 
       <!--RESULTS SECTION -->
       <section id="results" class="hidden">
         <h2></h2>
         <ul id="results-list"></ul>
       </section>
-      <!------------------->
+      <!----------------->
 
-      <!--WEATHER SECTION-->
-      <section id="getWeather" class="hidden">
-        <h2>Weather</h2>
-        <ul id="results-getWeather"></ul>
-      </section>
-      <!------------------>
+      <div class="bodyContainer">
+        <!--WEATHER SECTION-->
+        <section id="getWeather" class="hidden">
+          <h2 class="js-cityWeather">Weather</h2>
+          <div class="weatherBox">
+            <ul id="results-getWeather"></ul>
+          </div>
+        </section>
+        <!------------------>
 
-      <!--TRAILS SECTION-->
-      <section id="getTrails" class="hidden">
-        <h2>Trails</h2>
-        <ul id="results-getTrails"></ul>
-      </section>
-      <!------------------->
+        <!---========= RESULTS ==========----->
 
-      <!--SPORTS SECTION-->
-      <section id="getSports" class="hidden">
-        <h2>Events</h2>
-        <ul id="results-getSports"></ul>
-      </section>
-      <!------------------>
+        <div class="resultBox">
+          <!--TRAILS SECTION-->
+          <section id="getTrails" class="hidden">
+            <div class="sectionBox">
+              <div class="Title hidden">
+                <h2>Trails</h2>
+              </div>
+              <ul id="results-getTrails" class="result"></ul>
+            </div>
+          </section>
+          <!------------------->
 
-      <!--CONCERT SECTION-->
-      <section id="getMusic" class="hidden">
-        <h2>Concerts</h2>
-        <ul id="results-getMusic"></ul>
-      </section>
-      <!------------------>
+          <!--SPORTS SECTION-->
+          <section id="getSports" class="hidden">
+            <div class="sectionBox">
+              <div class="Title hidden">
+                <h2>Sports</h2>
+              </div>
+              <ul id="results-getSports" class="result"></ul>
+            </div>
+          </section>
+          <!------------------>
 
-      <!--PLAYS SECTION-->
-      <section id="getPlays" class="hidden">
-        <h2>Plays</h2>
-        <ul id="results-getPlays"></ul>
-      </section>
+          <!--CONCERT SECTION-->
+          <section id="getMusic" class="hidden">
+            <div class="sectionBox">
+              <div class="Title hidden">
+                <h2>Music</h2>
+              </div>
+              <ul id="results-getMusic" class="result"></ul>
+            </div>
+          </section>
+          <!------------------>
+
+          <!--PLAYS SECTION-->
+          <section id="getPlays" class="hidden">
+            <div class="sectionBox">
+              <div class="Title hidden">
+                <h2>Theatre</h2>
+              </div>
+              <ul id="results-getPlays" class="result"></ul>
+            </div>
+          </section>
+          <!------------------>
+        </div>
+      </div>
+
+      <!----------SHARE SECTION----------->
+      <footer class="shareSection positionAbsolute">
+        <div class="footerText">
+          <p>
+            Do you Love Go-Be Active, or know someone who would? Share it on
+            your social media!
+          </p>
+        </div>
+        <!--
+        <div class="sharebuttons a2a_kit a2a_kit_size_32 a2a_default_style">
+          <a class="a2a_button_facebook" target="_blank" href="/#facebook"
+            ><span
+              class="a2a_svg a2a_s__default a2a_s_facebook"
+              style="background-color: rgb(59, 89, 152);"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+              >
+                <path
+                  fill="#FFF"
+                  d="M17.78 27.5V17.008h3.522l.527-4.09h-4.05v-2.61c0-1.182.33-1.99 2.023-1.99h2.166V4.66c-.375-.05-1.66-.16-3.155-.16-3.123 0-5.26 1.905-5.26 5.405v3.016h-3.53v4.09h3.53V27.5h4.223z"
+                ></path></svg></span
+            ><span class="a2a_label">Facebook</span></a
+          >
+          <a
+            class="a2a_button_twitter"
+            target="_blank"
+            href="https://twitter.com/"
+            ><span
+              class="a2a_svg a2a_s__default a2a_s_twitter"
+              style="background-color: rgb(85, 172, 238);"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+              >
+                <path
+                  fill="#FFF"
+                  d="M28 8.557a9.913 9.913 0 0 1-2.828.775 4.93 4.93 0 0 0 2.166-2.725 9.738 9.738 0 0 1-3.13 1.194 4.92 4.92 0 0 0-3.593-1.55 4.924 4.924 0 0 0-4.794 6.049c-4.09-.21-7.72-2.17-10.15-5.15a4.942 4.942 0 0 0-.665 2.477c0 1.71.87 3.214 2.19 4.1a4.968 4.968 0 0 1-2.23-.616v.06c0 2.39 1.7 4.38 3.952 4.83-.414.115-.85.174-1.297.174-.318 0-.626-.03-.928-.086a4.935 4.935 0 0 0 4.6 3.42 9.893 9.893 0 0 1-6.114 2.107c-.398 0-.79-.023-1.175-.068a13.953 13.953 0 0 0 7.55 2.213c9.056 0 14.01-7.507 14.01-14.013 0-.213-.005-.426-.015-.637.96-.695 1.795-1.56 2.455-2.55z"
+                ></path></svg></span
+            ><span class="a2a_label">Twitter</span></a
+          >
+          <a
+            class="a2a_button_google_plus"
+            target="_blank"
+            href="/#google_plus"
+            rel="nofollow noopener"
+            ><span
+              class="a2a_svg a2a_s__default a2a_s_google_plus"
+              style="background-color: rgb(202, 224, 255);"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+              >
+                <path
+                  d="M27 15h-2v-2h-2v2h-2v2h2v2h2v-2h2m-15-2v2.4h3.97c-.16 1.03-1.2 3.02-3.97 3.02-2.39 0-4.34-1.98-4.34-4.42s1.95-4.42 4.34-4.42c1.36 0 2.27.58 2.79 1.08l1.9-1.83C15.47 9.69 13.89 9 12 9c-3.87 0-7 3.13-7 7s3.13 7 7 7c4.04 0 6.72-2.84 6.72-6.84 0-.46-.05-.81-.11-1.16H12z"
+                  fill="#FFF"
+                ></path></svg></span
+            ><span class="a2a_label">google_plus</span></a
+          >
+          <a
+            class="a2a_button_linkedin"
+            target="_blank"
+            href="/#linkedin"
+            rel="nofollow noopener"
+            ><span
+              class="a2a_svg a2a_s__default a2a_s_linkedin"
+              style="background-color: rgb(0, 123, 181);"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+              >
+                <path
+                  d="M6.227 12.61h4.19v13.48h-4.19V12.61zm2.095-6.7a2.43 2.43 0 0 1 0 4.86c-1.344 0-2.428-1.09-2.428-2.43s1.084-2.43 2.428-2.43m4.72 6.7h4.02v1.84h.058c.56-1.058 1.927-2.176 3.965-2.176 4.238 0 5.02 2.792 5.02 6.42v7.395h-4.183v-6.56c0-1.564-.03-3.574-2.178-3.574-2.18 0-2.514 1.7-2.514 3.46v6.668h-4.187V12.61z"
+                  fill="#FFF"
+                ></path></svg></span
+            ><span class="a2a_label">LinkedIn</span></a
+          >
+          <a
+            class="a2a_button_pinterest"
+            target="_blank"
+            href="/#pinterest"
+            rel="nofollow noopener"
+            ><span
+              class="a2a_svg a2a_s__default a2a_s_pinterest"
+              style="background-color: rgb(189, 8, 28);"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+              >
+                <path
+                  fill="#FFF"
+                  d="M16.539 4.5c-6.277 0-9.442 4.5-9.442 8.253 0 2.272.86 4.293 2.705 5.046.303.125.574.005.662-.33.061-.231.205-.816.27-1.06.088-.331.053-.447-.191-.736-.532-.627-.873-1.439-.873-2.591 0-3.338 2.498-6.327 6.505-6.327 3.548 0 5.497 2.168 5.497 5.062 0 3.81-1.686 7.025-4.188 7.025-1.382 0-2.416-1.142-2.085-2.545.397-1.674 1.166-3.48 1.166-4.689 0-1.081-.581-1.983-1.782-1.983-1.413 0-2.548 1.462-2.548 3.419 0 1.247.421 2.091.421 2.091l-1.699 7.199c-.505 2.137-.076 4.755-.039 5.019.021.158.223.196.314.077.13-.17 1.813-2.247 2.384-4.324.162-.587.929-3.631.929-3.631.46.876 1.801 1.646 3.227 1.646 4.247 0 7.128-3.871 7.128-9.053.003-3.918-3.317-7.568-8.361-7.568z"
+                ></path></svg></span
+            ><span class="a2a_label">Pinterest</span></a
+          >
+          <a
+            class="a2a_button_email"
+            target="_blank"
+            href="/#email"
+            rel="nofollow noopener"
+            ><span
+              class="a2a_svg a2a_s__default a2a_s_email"
+              style="background-color: rgb(1, 102, 255);"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+              >
+                <path
+                  fill="#FFF"
+                  d="M26 21.25v-9s-9.1 6.35-9.984 6.68C15.144 18.616 6 12.25 6 12.25v9c0 1.25.266 1.5 1.5 1.5h17c1.266 0 1.5-.22 1.5-1.5zm-.015-10.765c0-.91-.265-1.235-1.485-1.235h-17c-1.255 0-1.5.39-1.5 1.3l.015.14s9.035 6.22 10 6.56c1.02-.395 9.985-6.7 9.985-6.7l-.015-.065z"
+                ></path></svg></span
+            ><span class="a2a_label">Email</span></a
+          >
+          <div style="clear: both;"></div>
+        </div>-->
+      </footer>
       <!------------------>
     </div>
     <script src="index.js"></script>
