--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-    <!--<link rel="stylesheet" href="index.css" />-->
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/grid.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -159,7 +159,7 @@
             your social media!
           </p>
         </div>
-        <!--
+
         <div class="sharebuttons a2a_kit a2a_kit_size_32 a2a_default_style">
           <a class="a2a_button_facebook" target="_blank" href="/#facebook"
             ><span
@@ -271,7 +271,7 @@
             ><span class="a2a_label">Email</span></a
           >
           <div style="clear: both;"></div>
-        </div>-->
+        </div>
       </footer>
       <!------------------>
     </div>
