--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Pacifico?Roboto&display=swap"
       rel="stylesheet"
     />
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--<script src="date.format.js"></script>-->
     <script src="https://use.fontawesome.com/webfontloader/1.6.24/webfontloader.js"></script>
 
