--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
 
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" type="text/css" href="social.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/0f63d8ca7c.css"
-      media="all"
-    />
-    <link
+
+    <!--<link
       href="https://fonts.googleapis.com/css?family=Pacifico?Roboto&display=swap"
       rel="stylesheet"
-    />
+    />-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <!--<script src="date.format.js"></script>-->
     <script src="https://use.fontawesome.com/webfontloader/1.6.24/webfontloader.js"></script>
 
     <!--======================-->
@@ -112,11 +107,11 @@
 
         <!---========= RESULTS ==========----->
 
-        <div class="resultBox">
+        <div class="resultBox hidden">
           <div class="resultBox-innerContainer">
             <!--TRAILS SECTION-->
             <section id="getTrails" class="hidden">
-              <div class="sectionBox">
+              <div class="sectionBox hidden">
                 <div class="Title hidden">
                   <h2>Trails</h2>
                 </div>
@@ -127,7 +122,7 @@
 
             <!--SPORTS SECTION-->
             <section id="getSports" class="hidden">
-              <div class="sectionBox">
+              <div class="sectionBox hidden">
                 <div class="Title hidden">
                   <h2>Sports</h2>
                 </div>
@@ -138,7 +133,7 @@
 
             <!--CONCERT SECTION-->
             <section id="getMusic" class="hidden">
-              <div class="sectionBox">
+              <div class="sectionBox hidden">
                 <div class="Title hidden">
                   <h2>Music</h2>
                 </div>
@@ -149,7 +144,7 @@
 
             <!--PLAYS SECTION-->
             <section id="getPlays" class="hidden">
-              <div class="sectionBox">
+              <div class="sectionBox hidden">
                 <div class="Title hidden">
                   <h2>Theatre</h2>
                 </div>
